句子，和语法的显示，句子的添加正在开发中

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,12 @@
     <string name="grammar_btn">grammars</string>
 
 
-    <!-- SentencesActivity -->
+    <!-- AddEditSentenceActivity -->
     <string name="sentences_title">Sentences</string>
 
+    <!-- GrammarsActivity -->
+    <string name="grammar_title">Grammars</string>
 
+    <!-- GrammarsActivity -->
+    <string name="addeditsentence_title">Add Edit Sentence</string>
 </resources>
