句子编辑页面完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,10 @@
     <!-- GrammarsActivity -->
     <string name="grammar_title">Grammars</string>
 
-    <!-- GrammarsActivity -->
+    <!-- AddEditSentenceActivity -->
     <string name="addeditsentence_title">Add Edit Sentence</string>
+    <string name="content_hilnt">Content</string>
+    <string name="translation_hilnt">Enter your translation here</string>
+
+
 </resources>
