--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,13 +21,15 @@
     <string name="grammar_title">Grammars</string>
 
     <!-- AddEditSentenceActivity -->
-    <string name="addeditsentence_title">Add Edit Sentence</string>
+    <string name="addsentence_title">Add Sentence</string>
+    <string name="editsentence_title">Edit Sentence</string>
     <string name="content_hilnt">Content</string>
     <string name="translation_hilnt">Enter your translation here</string>
     <string name="addsentencesuccess">add success</string>
 
     <!-- AddEditGrammarActivity -->
-    <string name="addeditgrammar_title">Add Edit Grammar</string>
+    <string name="addgrammar_title">Add Grammar</string>
+    <string name="editgrammar_title">Edit Grammar</string>
     <string name="grammar_name_hilnt">name</string>
     <string name="grammar_content_hilnt">Enter your content here</string>
     <string name="addgrammarsuccess">add success</string>
