--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,8 +32,7 @@
     <string name="edit_delete">Delete</string>
     <string name="delete_result" formatted="false">Delete success %d,fail %d.</string>
     <string name="menu_cancel">Cancel</string>
-    <string name="search_title">Search</string>
-    <string name="search_hint">Search Sentence</string>
+
 
     <!-- AddEditSentenceActivity -->
     <string name="addsentence_title">Add Sentence</string>
@@ -53,7 +52,6 @@
     <string name="grammardetail_title">Grammar Detail</string>
     <string name="grammardetail_empty_grammar">do not found grammar</string>
 
-
     <!-- SentenceDetailActivity -->
     <string name="sentencedetail_title">Sentence Detail</string>
     <string name="sentencedetail_empty_sentence">do not found sentence</string>
@@ -64,6 +62,8 @@
     <string name="detail_cancel">Cancel</string>
     <string name="detail_deletefail">delete Fail</string>
 
-
+    <!-- SerachActivity -->
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search Sentence Grammar....</string>
 
 </resources>
