--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,13 +84,41 @@
     <!-- RegisterUserActivity -->
     <string name="register_title">RegisterUser</string>
     <string name="registersuccess">注册成功</string>
+    <string name="registerandloginsuccess">注册并登陆成功</string>
     <string name="username">用户名:</string>
+    <string name="email">邮箱:</string>
+    <string name="mobile">手机:</string>
+    <string name="smscode">验证码:</string>
     <string name="password">密码:</string>
-    <string name="register">注册</string>
+    <string name="oldpassword">旧密码:</string>
+    <string name="newpassword">新密码:</string>
+    <string name="registerbyname">用户名+密码注册</string>
+    <string name="registerbyemail">邮箱+密码注册</string>
+    <string name="registerbymobile">手机+验证码注册并登陆</string>
+    <string name="requestsmscode">获取验证码</string>
+    <string name="resetpwdbyemail">邮箱重置</string>
+    <string name="resetpwdbysmscode">短信重置</string>
+    <string name="resetpwdbyoldpwd">旧密码重置</string>
+    <string name="loginsuccess">登陆成功</string>
+    <string name="updatesuccess">更新成功</string>
+
+    <string name="loginname">用户名登陆</string>
+    <string name="loginmail">邮箱登陆</string>
+    <string name="loginmobile">手机+密码登陆</string>
+    <string name="logout">注销</string>
+
+    <string name="updateuser">更新用户信息</string>
+
+    <string name="alreadysendmail">已经发送重置密码邮件，请点击链接修改密码</string>
+    <string name="sendmailfail">发送邮件失败，请检查网絡或邮件地址是否正确</string>
+    <string name="resetpasswordsuccess">密码修改成功</string>
 
     <!-- LoginUserActivity -->
     <string name="login_title">LoginUser</string>
 
     <!-- UpdateUserActivity -->
     <string name="updateuser_title">UpdateUser</string>
+
+    <!-- 网絡错误 -->
+    <string name="networkerror">服务器开小差了，请稍后再試</string>
 </resources>
