--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,5 +235,6 @@
 
 
     <string name="action_settings">Settings</string>
+    <string name="title_phoneticsdetail">PhoneticsDetail</string>
 
 </resources>
