语法详情完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,4 +249,8 @@
 
     <string name="title_phoneticssymbolsdetail">PhoneticsSymbolsDetail</string>
 
+    <string name="title_语法列表">语法列表</string>
+
+    <string name="title_grammardetail">GrammarDetail</string>
+
 </resources>
