--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,6 +180,9 @@
     <!-- WordGroupActivity -->
     <string name="wordgroup_title">WordGroup</string>
 
+    <!-- WordGroupsActivity -->
+    <string name="wordgroups_title">词单</string>
+
     <!-- TractateActivity -->
     <string name="tractate_title">Tractate</string>
 
@@ -229,6 +232,11 @@
     <string-array name="intermediate_tablayout">
         <item>词单</item>
         <item>短语</item>
+    </string-array>
+
+    <string-array name="wordgroups_tablayout">
+        <item>热门推荐</item>
+        <item>我的词单</item>
     </string-array>
 
     <string-array name="advanced_tablayout">
