词单完成，公开词单，我的词单，我的收藏

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,6 +237,7 @@
     <string-array name="wordgroups_tablayout">
         <item>热门推荐</item>
         <item>我的词单</item>
+        <item>我的收藏</item>
     </string-array>
 
     <string-array name="advanced_tablayout">
