单词列表完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,4 +262,6 @@
 
     <string name="title_grammardetail">GrammarDetail</string>
 
+    <string name="title_words">Words</string>
+
 </resources>
