--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -281,10 +281,18 @@
 
     <string-array name="sentenceactivity_tablayout">
         <item>热门推荐</item>
-        <item>我的句組</item>
+        <item>我的句组</item>
         <item>我的收藏</item>
     </string-array>
 
     <string name="title_sentences">Sentences</string>
+
+    <string name="title_tractategroups">TractateGroups</string>
+
+    <string-array name="tractategroupsactivity_tablayout">
+        <item>热门短文</item>
+        <item>我的短文</item>
+        <item>我的收藏</item>
+    </string-array>
 
 </resources>
