文章分类详情完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,4 +297,6 @@
 
     <string name="title_tractates">Tractates</string>
 
+    <string name="title_tractatedetail">TractateDetail</string>
+
 </resources>
