--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -312,4 +312,6 @@
 
     <string name="title_addtractate">添加文章</string>
 
+    <string name="title_tractatepreview">TractatePreview</string>
+
 </resources>
