添加收藏单词和收藏句子页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -316,4 +316,8 @@
 
     <string name="title_tractatepreview">TractatePreview</string>
 
+    <string name="title_wordcollect">WordCollect</string>
+
+    <string name="title_sentencecollect">SentenceCollect</string>
+
 </resources>
