添加句子收藏完成，添加句单收藏完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -321,4 +321,6 @@
 
     <string name="title_sentencecollect">SentenceCollect</string>
 
+    <string name="title_multiple">Multiple</string>
+
 </resources>
