剪切板基本获取完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -333,4 +333,6 @@
 
     <string name="title_musicplay">MusicPlay</string>
 
+    <string name="title_clipboard">Clipboard</string>
+
 </resources>
