剪切板基本实现

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -335,4 +335,13 @@
 
     <string name="title_clipboard">Clipboard</string>
 
+    <string name="demo_text">移动游戏越来越多的以基于服务的商业模式运行，这也就需要更为综合的游戏管理解决方案，来使移动游戏发展更上一层楼。而且，随着玩家对图形质量和实时多人游戏性能需求的提升，以及对社区、社区网络支持、商业和通讯要求的提高，让移动游戏后端变得更加复杂。所以，游戏后端的优劣对游戏来说是至关重要的。
+        对此，fofofum产品开发副总裁Ian Atkinson表示，在你选择自己开发还是购买游戏后端之前，有一些问题你必须搞清楚。如果游戏后端对于游戏体验来说是至关重要的，
+        比如大型多人在线游戏（MMOG ）或多人在线竞技游戏（MOBA），或者你想要使用相同的后端来托管一些游戏的话，那么你的开发团队就应该能够完全掌控后端的方向。
+        而且，选择开发自己的游戏管理系统，自己就可以灵活的将其置于游戏的软件和基础设施里。但是，如果游戏后端不是游戏体验的关键，那么你的团队就应当把重点放在构建游戏的核心功能以及结构上。这样的结果就是，用于构建游戏后端组件的时间会减少，当游戏推出时，有可能会出现一些关键问题，比如大量玩家在同一时间涌进服务器时，
+        会出现服务器宕机和一些扩展性问题。开发者倾向于构建自己的后端组件，往往不会将游戏管理系统从网络层编码中分离出来，当所有的一切都加载到系统上的话就产生了扩展性问题。此外，不将后端组件分离出来的方式会使检修复杂化，还会增加修复一个bug却引起在其他层编码中出现更多bug的风险。
+        如果你有一个专门针对后端的内部团队的话，那么你的开发资源几乎完全可以致力于构建、运行和维护游戏后端组件。否则，你就必须在关键时刻灵活调度开发周期，让开发资源离开前端游戏开发，转战游戏后端，并且还需继续跟进已经发布的游戏。
+
+如果你没有或者无法腾出专用资源，那么与一个游戏后端合作伙伴共同工作的好处就是，你无需花时间和金钱去雇佣和管理后端集成与操作的资源。另外，你的核心开发团队还可以专注地创作出自己最好的游戏。
+        </string>
 </resources>
